--- a/rps-function.html
+++ b/rps-function.html
@@ -6,48 +6,40 @@
   <body>
     <p>Rock Paper Scissors</p>
     <button onclick="{
-      let computerMove = '';
-      let randomNumber = Math.floor((Math.random() * 3) + 1);
-
-      if (randomNumber === 1) computerMove = 'Rock';
-      if (randomNumber === 2) computerMove = 'Paper';
-      if (randomNumber === 3) computerMove = 'Scissor';
-
-      const message = `You picked Rock and computer picks ${computerMove}.`;
-      if (computerMove === 'Rock') alert(`${message} Tie`);
-      if (computerMove === 'Paper') alert(`${message} Computer wins`);
-      if (computerMove === 'Scissor') alert(`${message} Player wins`);
+      playGame('Rock');
     }">Rock</button>
     <button onclick="{
-      let computerMove = '';
-      let randomNumber = Math.floor((Math.random() * 3) + 1);
-
-      if (randomNumber === 1) computerMove = 'Rock';
-      if (randomNumber === 2) computerMove = 'Paper';
-      if (randomNumber === 3) computerMove = 'Scissor';
-
-      const message = `You picked Paper and computer picks ${computerMove}.`;
-      if (computerMove === 'Paper') alert(`${message} Tie`);
-      if (computerMove === 'Scissor') alert(`${message} Computer wins`);
-      if (computerMove === 'Rock') alert(`${message} Player wins`);
+      playGame('Paper');
     }">Paper</button>
     <button onclick="{
-      let computerMove = '';
-      let randomNumber = Math.floor((Math.random() * 3) + 1);
-
-      if (randomNumber === 1) computerMove = 'Rock';
-      if (randomNumber === 2) computerMove = 'Paper';
-      if (randomNumber === 3) computerMove = 'Scissor';
-
-      const message = `You picked Scissor and computer picks ${computerMove}.`;
-      if (computerMove === 'Scissor') alert(`${message} Tie`);
-      if (computerMove === 'Rock') alert(`${message} Computer wins`);
-      if (computerMove === 'Paper') alert(`${message} Player wins`);
-    }">Paper</button>
+      playGame('Scissor');
+    }">Scissor</button>
 
     <script>
+      function playGame(playerMove){
+        let computerMove = pickComputerMove();
+        const message = `You picked ${playerMove} and computer picks ${computerMove}.`;
+        if (playerMove === 'Scissor'){
+          if (computerMove === 'Scissor') alert(`${message} Tie`);
+          if (computerMove === 'Rock') alert(`${message} Computer wins`);
+          if (computerMove === 'Paper') alert(`${message} Player wins`);
+        } else if (playerMove === 'Rock'){
+          if (computerMove === 'Rock') alert(`${message} Tie`);
+          if (computerMove === 'Scissor') alert(`${message} Computer wins`);
+          if (computerMove === 'Paper') alert(`${message} Player wins`);
+        } else {
+          if (computerMove === 'Paper') alert(`${message} Tie`);
+          if (computerMove === 'Scissor') alert(`${message} Computer wins`);
+          if (computerMove === 'Rock') alert(`${message} Player wins`);
+        }
+      }
       function pickComputerMove(){
-        
+        let randomNumber = Math.floor((Math.random() * 3) + 1);
+        let computerMove = '';
+        if (randomNumber === 1) computerMove = 'Rock';
+        if (randomNumber === 2) computerMove = 'Paper';
+        if (randomNumber === 3) computerMove = 'Scissor';
+        return computerMove;
       }
     </script>
   </body>
