--- a/09-dom.html
+++ b/09-dom.html
@@ -4,7 +4,7 @@
     <title>DOM projects</title>
   </head>
   <body>
-    <p>Youtube Subscribe Button></p>
+    <p>YouTube Subscribe Button</p>
     <button onclick="
       subscribe();
     "class="js-subscribe-button">Subscribe</button>
@@ -15,11 +15,10 @@
     <p>Rock Paper Scissors</p>
     <p>Click here</p>
     <br />
-    <br />
 
-    <p>Amazon Shipping calculator</p>
-    <p>Orders under $40=+$10 shipping.</p>
-    <p>Orders over $40=FREE shipping.</p>
+    <p>Amazon Shipping Calculator</p>
+    <p>Orders under $40 = +$10 shipping.</p>
+    <p>Orders over $40 = FREE shipping.</p>
     <input>
     <button>Calculate</button>
     </Button>
