added auto play on rps game

--- a/10-rps.html
+++ b/10-rps.html
@@ -25,6 +25,10 @@
     <button onclick="{
       resetScore();
     }" class="reset-score-button">Reset Score</button>
+
+    <button onclick="{
+      automatePlay();
+    }" class="play-button js-play-button">Play</button>
     
     <script src="scripts/10-rps.js"></script>
   </body>
